[project]
name = "samp_query"
version = "0.2.0"
authors = [
  { name="The Cheaterman", email="the.cheaterman@gmail.com" },
]
description = "A SAMP query/RCON client for Python using trio."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "trio",
  "faust-cchardet",
]

[project.scripts]
samp-rcon = "samp_query.rcon:run"

[project.urls]
"Homepage" = "https://github.com/Cheaterman/samp-query"
"Bug Tracker" = "https://github.com/Cheaterman/samp-query/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.flake8]
exclude = [
    ".git",
    ".mypy_cache",
    "__pycache__",
    "env",
    "build",
    "dist",
]

[tool.mypy]
strict = true
files = ["."]
exclude = [
    ".git",
    ".mypy_cache",
    "__pycache__",
    "env",
    "build",
    "dist",
]

[tool.pytest.ini_options]
norecursedirs = [
    ".git",
    ".mypy_cache",
    "__pycache__",
    "env",
    "build",
    "dist",
]
addopts = "-Werror --cov=samp_query --cov-report=term-missing --cov-fail-under=100"
trio_mode = true
